@@ -1,27 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<T3locallang>
-	<meta type="array">
-		<type>database</type>
-		<description>Language labels for constants (extension 'tx_ncstaticfilecache')</description>
-	</meta>
-	<data type="array">
-		<languageKey index="default" type="array">
-			<label index="nc_staticfilecache.field">Cache page as static file</label>
-			<label index="moduleFunction.tx_ncstaticfilecache_infomodule">Static file cache</label>
-			<label index="nc_staticfilecache_task_processDirtyPages.itemLimit">Item limit</label>
-
-			<label index="nc_staticfilecache_task_removeExpiredPages.name">Remove expired pages</label>
-		        <label index="nc_staticfilecache_task_removeExpiredPages.description">All expired pages will be removed from the cache.</label>
-        		<label index="nc_staticfilecache_task_processDirtyPages.name">Process dirty pages</label>
-        		<label index="nc_staticfilecache_task_processDirtyPages.description">Process marked pages to keep the cache up to date.</label>
-		</languageKey>
-		<languageKey index="de" type="array">
-			<label index="nc_staticfilecache.field">Speichere Seitencache als statische Datei</label>
-			<label index="moduleFunction.tx_ncstaticfilecache_infomodule">Statischer HTML Cache</label>
-		</languageKey>
-		<languageKey index="nl" type="array">
-			<label index="nc_staticfilecache.field">Pagina opslaan als statische html</label>
-			<label index="moduleFunction.tx_ncstaticfilecache_infomodule">Statische html cache</label>
-		</languageKey>
-	</data>
-</T3locallang>
