@@ -3,6 +3,7 @@
 	* [!!!] Create a command controller and mark the CLI and Tasks class as deprecated. The classes are removed in a few versions
 	* Move the crawler hook to the new (namespace based) location
 	* Move the Info module to the new (namespace based) location
+	* Migrate the L10N file in the root folder to the new L10N file in Resources/Private/Language/locallang.xml
 
 2015-04-15  Tim Lochmüller <tim@fruit-lab.de
 
